Cập nhật code style, tăng tốc độ xử lí và cập nhật giao diện
Các thay đổi trong commit này:
- Xóa bỏ các unused var nhằm tăng tốc độ xử lí cho phần mềm
- Cập nhật CSS cho status và menu
- Sửa lỗi không thay đổi VPN
- Cập nhật giao diện Cài đặt và tăng tốc độ xử lí cho Cài đặt
- Xóa bỏ thư mục thừa
- Xóa bỏ các gói tiện ích Node thừa

--- a/css/browser.css
+++ b/css/browser.css
@@ -86,13 +86,13 @@
     margin-right: 96px;
     padding-left: 16px;
     padding-right: 16px;
-    border-radius: 0px;
+    border-radius: 1px;
 }
 
 .suggestions-ul>li:hover {}
 
 .selected {
-    background-color: #3F51B5;
+    background-color: #2196F3;
     color: #fff;
 }
 
