--- a/css/ripple.css
+++ b/css/ripple.css
@@ -23,3 +23,15 @@
     opacity: 0.3;
     transform: translate3d(-50%, -50%, 0);
 }
+
+.ripple-hover-effect {
+    z-index: -3;
+    position: absolute;
+    border-radius: 50%;
+    background-color: #444;
+    user-select: none;
+    pointer-events: none;
+    padding: 0;
+    margin: 0;
+    opacity: 0.05;
+}
