--- a/css/browser.css
+++ b/css/browser.css
@@ -4,7 +4,7 @@
     height: 42px;
     z-index: 9999;
     padding-top: 6px;
-    -webkit-transition: background-color 0.2s;
+    transition: background-color 0.2s;
     box-shadow: 0 1px 0px rgba(0, 0, 0, 0.1);
     position: relative;
     top: 0px;
@@ -20,26 +20,15 @@
 }
 
 .searchBox {
-    border-radius: 0px;
+    border-radius: 6px;
     margin-top: 2px;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
     background-color: #fff;
     height: 32px;
     width: calc(100% - 195px);
-    margin-left: 16px;
-    -webkit-transition: background-color 0.2s;
+    margin-left: 12px;
+    transition: background-color 0.2s;
     float: left;
-}
-
-.webview {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    display: flex;
-    height: 60px;
-    margin-top: 48px;
 }
 
 .searchInput {
@@ -86,10 +75,8 @@
     margin-right: 52px;
     padding-left: 16px;
     padding-right: 16px;
-    border-radius: 1px;
+    border-radius: 4px;
 }
-
-.suggestions-ul>li:hover {}
 
 .selected {
     background-color: #2196F3;
